Icons changed using svgs, Made dark mode by default, Fixed some styles

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,20 @@
   --Very-Dark-Grayish-Blue: hsl(233, 14%, 35%);
   --Very-Darker-Grayish-Blue: hsl(237, 14%, 26%);
 
-  /* Light Theme */
+  /* Dark Theme */
+  --body-background: hsl(235, 21%, 11%);
+  --background-image: url('../images/bg-desktop-dark.jpg');
+  --input-and-card: hsl(235, 24%, 19%);
+  --text-color: hsl(0, 0%, 98%);
+  --ceckbox-border: hsl(0, 0%, 24%);
+  --Grayish-Blue: hsl(235, 19%, 35%);
+  --alert: hsl(230, 38%, 28%);
+  --text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.459), 1px -1px 0 rgba(255, 255, 255, 0.479),
+    -1px 1px 0 rgba(255, 255, 255, 0.473), 1px 1px 0 rgba(255, 255, 255, 0.466);
+  --opacity: 0.1;
+}
+
+[data-theme='light'] {
   --body-background: hsl(236, 33%, 92%);
   --background-image: url('../images/bg-desktop-light.jpg');
   --input-and-card: hsl(0, 0%, 98%);
@@ -25,18 +38,7 @@
   --alert: hsl(253, 68%, 79%);
   --text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.4), 1px -1px 0 rgba(0, 0, 0, 0.4),
     -1px 1px 0 rgba(0, 0, 0, 0.4), 1px 1px 0 rgba(0, 0, 0, 0.4);
-}
-
-[data-theme='dark'] {
-  --body-background: hsl(235, 21%, 11%);
-  --background-image: url('../images/bg-desktop-dark.jpg');
-  --input-and-card: hsl(235, 24%, 19%);
-  --text-color: hsl(0, 0%, 98%);
-  --ceckbox-border: hsl(0, 0%, 24%);
-  --Grayish-Blue: hsl(235, 19%, 35%);
-  --alert: hsl(230, 38%, 28%);
-  --text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.459), 1px -1px 0 rgba(255, 255, 255, 0.479),
-    -1px 1px 0 rgba(255, 255, 255, 0.473), 1px 1px 0 rgba(255, 255, 255, 0.466);
+  --opacity: 1;
 }
 
 *,
@@ -73,22 +75,22 @@ main {
   grid-template-rows: 1fr 1fr auto 1fr;
   column-gap: 1rem;
   position: relative;
-  bottom: 15rem;
+  bottom: 16rem;
   padding: 1rem;
+  height: 4rem;
 }
 
 .content {
-  height: 5.5rem;
   display: grid;
   align-content: center;
   display: flex;
   justify-content: space-between;
   align-content: center;
-  color: var(--Very-Light-Gray);
-  font-size: 2.6rem;
 }
 
 .content h2 {
+  color: var(--Very-Light-Gray);
+  font-size: 2.6rem;
   font-weight: 700;
   letter-spacing: 10px;
   text-align: left;
@@ -98,11 +100,9 @@ main {
 .theme-switch {
   display: inline-block;
   height: 3rem;
+  width: 3rem;
   position: relative;
-  width: 50px;
   cursor: pointer;
-  /* background: #000; */
-  z-index: 1000;
 }
 
 .theme-switch input {
@@ -113,11 +113,10 @@ main {
   position: absolute;
 }
 
-/* .moon {
-  height: 100px;
-  width: 100px;
-  background: white;
-} */
+.icon {
+  width: 2rem;
+  height: 2rem;
+}
 
 .addTodo {
   min-width: 100%;
@@ -133,11 +132,17 @@ main {
   background: var(--input-and-card);
   border: none;
   width: 100%;
+  height: 5rem;
   padding: 0.6rem;
   border-radius: 5px;
   outline: none;
   color: var(--text-color);
   caret-color: var(--Bright-Blue);
+}
+
+input::placeholder {
+  font-size: 1rem;
+  letter-spacing: 1px;
 }
 
 input:focus::placeholder {
@@ -173,6 +178,9 @@ input:focus::placeholder {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.p {
   color: var(--Dark-Grayish-Blue);
 }
 
@@ -231,7 +239,6 @@ input:focus::placeholder {
 }
 
 /* ============== tasks and custom checkbox */
-
 .task {
   cursor: pointer;
   display: flex;
@@ -242,7 +249,7 @@ input:focus::placeholder {
   position: relative;
 }
 
-.task:not(:last-child)::after {
+li::after {
   content: '';
   position: absolute;
   right: 0;
@@ -250,6 +257,7 @@ input:focus::placeholder {
   margin-top: 6rem;
   background: var(--Light-Grayish-Blue);
   height: 1px;
+  opacity: var(--opacity);
 }
 
 .task:hover {
@@ -268,8 +276,8 @@ input:focus::placeholder {
 
 .custom_checkbox {
   display: inline-block;
-  width: 2rem;
-  height: 2rem;
+  width: 2.2rem;
+  height: 2.2rem;
   cursor: pointer;
   border: 1px solid var(--ceckbox-border);
   border-radius: 50%;
@@ -278,25 +286,31 @@ input:focus::placeholder {
   transition: transform 300ms ease-in-out;
 }
 
-.task:hover .custom_checkbox,
+/*
+!not sure yet
+ .task:hover .custom_checkbox,
 [type='checkbox']:focus + label .custom_checkbox {
-  transform: scale(1.2);
+  transform: scale(1.1);
   color: var(--Dark-Grayish-Blue);
-}
+} */
 /* background: var(--Check-Background); */
 
 [type='checkbox']:checked + label .custom_checkbox {
-  background: var(--Check-Background);
+  background-image: url('/images/icon-check.svg'), var(--Check-Background);
+  background-repeat: no-repeat;
+  background-position: center center;
   color: var(--Very-Light-Gray);
 }
 
-[type='checkbox']:checked + label .custom_checkbox::before {
-  content: '✔';
+/*
+!not sure yet
+ [type='checkbox']:checked + label .custom_checkbox::before {
+  content: '';
   position: absolute;
   top: 4px;
   left: 4px;
   transition: all 0.1s;
-}
+} */
 
 .task label {
   display: flex;
@@ -314,32 +328,34 @@ input:focus::placeholder {
 .completed label {
   text-decoration: line-through;
   color: hsl(0, 1%, 76%);
+  opacity: 0.3;
 }
 
-.deleteBtn {
-  font-size: 2rem;
-  font-weight: 200;
+.delete {
+  width: 1.1rem;
+  height: 1.1rem;
   color: var(--Grayish-Blue);
   margin-right: 1rem;
+  cursor: pointer;
 }
 
 /* ============== Footer ==================== */
 .attribution {
   /* position: fixed; */
-  bottom: 3rem;
-  font-size: 11px;
+  margin-top: 5rem;
+  font-size: 1.3rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  /* width: 100%; */
   color: var(--Dark-Grayish-Blue);
 }
 .drag_text {
-  /* margin-bottom: 10rem; */
-  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 .attribution a {
+  font-size: 1rem;
   color: var(--Bright-Blue);
   text-decoration: none;
 }
@@ -358,23 +374,34 @@ input:focus::placeholder {
     font-size: 3.6rem;
   }
 
-  .attribution {
+  /*
+  !not sure yet
+   .attribution {
     bottom: 5rem;
+  } 
+  */
+  .attribution a {
+    font-size: 1.5rem;
+  }
+
+  .task:hover:last-child {
+    opacity: 0.7;
+    cursor: pointer;
   }
 
   .drag_text {
     margin-bottom: 4rem;
     font-size: 2rem;
   }
-  [type='checkbox']:checked + label .custom_checkbox::before {
-    top: 3.3px;
-    left: 3.3px;
-    font-size: 1.5rem;
-  }
 
   .custom_checkbox {
-    width: 2.2rem;
-    height: 2.2rem;
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+
+  .delete {
+    width: 1.5rem;
+    height: 1.5rem;
   }
 
   .buttons {
